# mcp-probe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.json
src/mcp_probe/: __init__.py  assertions.py  cli.py  config.py  errors.py  models.py  protocol.py  reporters.py  runner.py
tests/: test_assertions.py  test_cli.py  test_config.py  test_reporters.py  test_runner.py
tests/fixtures/: demo_server.py
