[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-probe"
version = "0.1.0"
description = "Contract testing for stdio MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mert Efe Kurt" }]
dependencies = ["jsonschema>=4.23,<5"]
keywords = ["mcp", "testing", "llm", "agents", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
mcp-probe = "mcp_probe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_probe"]

[tool.pytest.ini_options]
addopts = "--cov=mcp_probe --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
